[package]
name = "track-payments-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
atty = "0.2.14"
chrono = "0.4.40"
crossterm = "0.28.1"
derive-getters = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
