[package]
name = "track-payments-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
atty = "0.2.14"
chrono = "0.4.40"
crossterm = "0.28.1"
derive-getters = "0.5.0"
internment = { version = "0.8.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
# codegen-units = 1
# lto = "fat"
# panic = "abort"
# strip = true
